user.css
/* ... */
.main-createPlaylistButton-createPlaylistIcon,
.main-likedSongsButton-likedSongsIcon,
.main-yourEpisodesButton-yourEpisodesIcon {
  border-radius: var(--border-radius-3);
}

.main-rootlist-rootlistItemLink:link,
.main-rootlist-rootlistItemLink:visited,
.main-rootlist-rootlistPlaylistHeader {
  color: var(--spice-text);
  background-color: var(--spice-card);
  background-size: cover;
  height: 45px;
  max-width: 45px;
  border-radius: var(--border-radius-2);
  padding: 0px;
  margin: auto;
}

.main-rootlist-textWrapper {
  display: none;
}

.ac0df040748287f39652cc42e3b762ba-scss,
.main-createPlaylistButton-button,
.main-collectionLinkButton-collectionLinkButton {
  padding: 0 12px !important;
}

._fvd5Owa47kK9H48h7mL {
  display: none;
}

.main-createPlaylistButton-button {
  width: -webkit-fill-available;
}

.main-rootlist-rootlistItem {
  padding-left: calc(8px + var(--indentation)*16px);
  padding-right: 8px;
  height: 62px;
}

.main-rootlist-statusIcons {
  right: 26px !important;
  top: 2px;
}

li.GlueDropTarget--playlists {
  height: 62px;
}

.main-rootlist-rootlistItemLinkActive~.main-rootlist-expandArrow:focus,
.main-rootlist-rootlistItemLinkActive~.main-rootlist-expandArrow:hover,
.main-rootlist-rootlistItemLinkActive~.main-rootlist-expandArrow {
  color: var(--spice-text);
}

.main-rootlist-rootlistPlaylistsScrollNode {
  height: 70%;
}

.main-rootlist-expandArrow {
  color: var(--spice-text);
  position: relative;
  margin-inline-start: -32px;
  padding: 8px;
  right: -2px;
  top: 17px;
}

.main-rootlist-expandArrowRotated {
  right: -5px !important;
  top: 14px !important;
}

.main-rootlist-rootlistItemLink {
  height: 32px;
  border-radius: var(--border-radius-2);
  padding: 0 12px;
}

.main-rootlist-statusIcons {
  margin-inline-start: -24px;
  position: relative;
  right: 8px;
}

.main-rootlist-rootlistItemLink:hover,
.main-createPlaylistButton-button:hover,
.ac0df040748287f39652cc42e3b762ba-scss:hover,
.main-collectionLinkButton-collectionLinkButton:hover {
  filter: brightness(50%);
}

.main-rootlist-rootlistItemLink:active,
.main-createPlaylistButton-button:active,
.ac0df040748287f39652cc42e3b762ba-scss:active,
.main-collectionLinkButton-collectionLinkButton:active {
  background-color: rgba(var(--spice-rgb-selected-row), .1);
}

.main-rootlist-rootlistItemLinkActive,
.main-rootlist-rootlistItemLinkActive:hover {
  background-color: var(--spice-selected-row);
}

.ac0df040748287f39652cc42e3b762ba-scss._926f2bd73c2ddb23fb86b430a2f48707-scss,
.main-collectionLinkButton-selected {
  background: var(--spice-selected-row) !important;
  color: var(--spice-shadow);
}

.main-rootlist-rootlistItemLinkActive .main-rootlist-textWrapper,
.main-rootlist-rootlistItemLinkActive .main-rootlist-textWrapper:hover,
.ac0df040748287f39652cc42e3b762ba-scss._926f2bd73c2ddb23fb86b430a2f48707-scss {
  color: var(--spice-shadow);
}

.main-rootlist-statusIcons>button {
  color: var(--spice-text);
}

.main-rootlist-rootlistItemLinkActive~.main-rootlist-statusIcons>button {
  color: var(--spice-shadow);
}

.main-rootlist-rootlistPlaylistHeader {
  display: none;
}

.main-rootlist-wrapper::-webkit-scrollbar {
  width: 4px;
}

.main-rootlist-wrapper::-webkit-scrollbar-thumb {
  background-color: var(--spice-card);
  border-radius: var(--border-radius-2);
}


/* tracklist */

.main-trackList-indexable .main-virtualScrollList-wrapper,
.main-trackList-indexable .main-rootlist-wrapper {
  background-color: var(--spice-card);
  border-radius: var(--border-radius-2);
  padding: 8px;
}

.main-trackList-indexable {
  padding: 8px;
}

.main-trackList-trackListHeader.g9n_9K5pFI3B_JuDI_hS {
  padding: 0px;
  margin: 0px;
  border-bottom: none;
  background: var(--spice-card);
}

.main-trackList-trackListRow {
  border-radius: var(--border-radius-2);
}

.main-trackList-trackListRow:hover {
  background-color: rgba(var(--spice-rgb-selected-row), .05);
}

.main-trackList-trackListRow:active {
  background-color: rgba(var(--spice-rgb-selected-row), .1);
}

.main-trackList-trackListRow.main-trackList-selected,
.main-trackList-trackListRow.main-trackList-selected:hover {
  background-color: var(--spice-selected-row);
}

.main-trackList-trackListRow.main-trackList-selected .main-tag-container,
.main-trackList-trackListRow.main-trackList-selected:hover .main-tag-container,
.main-trackList-trackListRow.main-trackList-selected:active .main-tag-container,
.main-trackList-trackListRow.main-trackList-selected:focus .main-tag-container {
  color: var(--spice-text) !important;
  background-color: var(--spice-shadow);
}

.main-tag-container,
.main-trackList-rowImage {
  border-radius: var(--border-radius-3);
}

.main-trackList-rowTitle {
  color: var(--spice-text) !important;
}

.main-trackList-trackListRow.main-trackList-selected span,
.main-trackList-trackListRow.main-trackList-selected:hover span,
.main-trackList-trackListRow.main-trackList-selected:active span,
.main-trackList-trackListRow.main-trackList-selected:focus span,
.main-trackList-trackListRow.main-trackList-selected a,
.main-trackList-trackListRow.main-trackList-selected:hover a,
.main-trackList-trackListRow.main-trackList-selected:active a,
.main-trackList-trackListRow.main-trackList-selected:focus a,
.main-trackList-trackListRow.main-trackList-selected button,
.main-trackList-trackListRow.main-trackList-selected:hover button,
.main-trackList-trackListRow.main-trackList-selected:active button,
.main-trackList-trackListRow.main-trackList-selected:focus button,
.main-trackList-trackListRow.main-trackList-selected div,
.main-trackList-trackListRow.main-trackList-selected:hover div,
.main-trackList-trackListRow.main-trackList-selected:active div,
.main-trackList-trackListRow.main-trackList-selected:focus div {
  color: var(--spice-text) !important;
}

.main-trackList-trackListHeader {
  margin-bottom: 8px;
}

._110dbc41d89af63f97cdd8b7cd7fea47-scss {
  border: 1px solid var(--spice-text);
}
/* ... */

